--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,9 @@ h1 {
   margin: 10px 0;
   filter: drop-shadow(0px 0px 3px rgb(255, 255, 255,0.5));
 }
+
+@media(max-width: 800px){
+  .cadastro{
+    width: 50vw;
+  }
+  }
