--- a/Css/styles.css
+++ b/Css/styles.css
@@ -21,10 +21,7 @@ h1 {
 }
 
 @media(max-width: 800px){
-  h1{
-    font-size: 28px;
-  }
-  h2{
-    font-size: 20px;
+  .cadastro{
+    width: 50vw;
   }
   }
