--- a/css/tabela.css
+++ b/css/tabela.css
@@ -4,35 +4,25 @@
     color: white;
 }
 
-.Aprovado{
-    color: rgba(130, 255, 165,0.5);
-}
-.Recuperação{
-    color: rgba(243, 255, 111,0.5);
-}
-.Reprovado{
-    color: rgba(255, 111, 111,0.5);
-}
-
 .alunos table{
     width: 100%;
 }
 
-.alunos table tr{
+.alunos #tblAlunos tr{
     display: grid;
+    grid-template-columns: 9vw 9vw 9vw 9vw 9vw 9vw 9vw;
     gap: 0;
     background-color: rgb(150, 150, 150,0.5);
     border-radius: 10px;
     margin-bottom: 3px;
-    justify-content: space-between;
-}
-
-.alunos #tblAlunos tr{
-    grid-template-columns: 9vw 9vw 9vw 9vw 9vw 9vw 9vw;
 }
 
 .alunos #tblAbaixoMedia tr{
-    grid-template-columns: 30% 30% 30%;
+    display: grid;
+    grid-template-columns: 7vw 7vw 7vw;
+    gap: 0;
+    background-color: rgb(150, 150, 150,0.5);
+    border-radius: 10px;
     margin-bottom: 3px;
 }
 
@@ -40,6 +30,16 @@
     color: rgb(255, 255, 255,0.75);
     padding: 10px 15px;
     text-align: center;
+}
+
+.alunos tbody .Aprovado{
+    background-color: rgba(130, 255, 165,0.5);
+}
+.alunos tbody .Recuperação{
+    background-color: rgba(243, 255, 111,0.5);
+}
+.alunos tbody .Reprovado{
+    background-color: rgba(255, 111, 111,0.5);
 }
 
 .alunos #tblAbaixoMedia{
