--- a/Css/tabela.css
+++ b/Css/tabela.css
@@ -8,21 +8,21 @@
     width: 100%;
 }
 
-.alunos #tblAlunos tr{
-    display: grid;
-    grid-template-columns: 9vw 9vw 9vw 9vw 9vw 9vw 9vw;
-    gap: 0;
-    background-color: rgb(150, 150, 150,0.5);
-    border-radius: 10px;
-    margin-bottom: 3px;
-}
-
-.alunos #tblAbaixoMedia tr{
+.aluno table tr{
     display: grid;
     grid-template-columns: 7vw 7vw 7vw;
     gap: 0;
     background-color: rgb(150, 150, 150,0.5);
     border-radius: 10px;
+    justify-content: space-between;
+}
+
+.alunos #tblAlunos tr{
+    grid-template-columns: 9vw 9vw 9vw 9vw 9vw 9vw 9vw;
+}
+
+.alunos #tblAbaixoMedia tr{
+    grid-template-columns: 30% 30% 30%;
     margin-bottom: 3px;
 }
 
@@ -32,16 +32,12 @@
     text-align: center;
 }
 
-.alunos tbody .Aprovado{
-    background-color: rgba(130, 255, 165,0.5);
+.Aprovado{
+    color: rgba(130, 255, 165,0.5);
 }
-.alunos tbody .Recuperação{
-    background-color: rgba(243, 255, 111,0.5);
+.Recuperação{
+    color: rgba(243, 255, 111,0.5);
 }
-.alunos tbody .Reprovado{
-    background-color: rgba(255, 111, 111,0.5);
-}
-
-.alunos #tblAbaixoMedia{
-    margin-top: 10px;
+.Reprovado{
+    color: rgba(255, 111, 111,0.5);
 }
