--- a/Css/styles.css
+++ b/Css/styles.css
@@ -20,6 +20,13 @@ h1 {
   filter: drop-shadow(0px 0px 3px rgb(255, 255, 255,0.5));
 }
 
+h2 {
+  width: 100%;
+  font-size: 12px;
+  margin: 10px 0;
+  filter: drop-shadow(0px 0px 3px rgb(255, 255, 255,0.5));
+}
+
 @media(max-width: 800px){
   .cadastro{
     width: 50vw;
