--- a/Css/tabela.css
+++ b/Css/tabela.css
@@ -4,40 +4,53 @@
     color: white;
 }
 
-.alunos table{
+table{
     width: 100%;
 }
 
-.aluno table tr{
+tr{
+    width: 100%;
     display: grid;
     grid-template-columns: 7vw 7vw 7vw;
     gap: 0;
-    background-color: rgb(150, 150, 150,0.5);
+    background-color: rgb(150, 150, 150,0.3);
     border-radius: 10px;
     justify-content: space-between;
+    margin-bottom: 5px;
 }
 
-.alunos #tblAlunos tr{
-    grid-template-columns: 9vw 9vw 9vw 9vw 9vw 9vw 9vw;
-}
-
-.alunos #tblAbaixoMedia tr{
-    grid-template-columns: 30% 30% 30%;
-    margin-bottom: 3px;
-}
-
-.alunos th{
+th{
     color: rgb(255, 255, 255,0.75);
     padding: 10px 15px;
     text-align: center;
 }
 
+#tblAlunos tr{
+    grid-template-columns: 9vw 9vw 9vw 9vw 9vw 9vw 9vw;
+}#tblAlunos tfoot tr{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#tblAbaixoMedia tr{
+    grid-template-columns: 30% 30% 30%;
+}
+
+#tblAlunos tfoot th{
+    width: 9vw;
+    padding: 10px 2px;
+    text-align: center;
+}
+
+
+
 .Aprovado{
-    color: rgba(130, 255, 165,0.5);
+    background-color: rgba(130, 255, 165,0.3);
 }
 .Recuperação{
-    color: rgba(243, 255, 111,0.5);
+    background-color: rgba(243, 255, 111,0.3);
 }
 .Reprovado{
-    color: rgba(255, 111, 111,0.5);
+    background-color: rgba(255, 111, 111,0.3);
 }
