--- a/Css/styles.css
+++ b/Css/styles.css
@@ -8,10 +8,11 @@
   transition: all 300ms ease-in-out;
 }
 body {
-  width: 100vw;
+  width: 100%;
   background-color: black;
+  display: grid;
+  overflow: scroll;
 }
-
 
 h1 {
   width: 100%;
@@ -20,15 +21,22 @@ h1 {
   filter: drop-shadow(0px 0px 3px rgb(255, 255, 255,0.5));
 }
 
-h2 {
-  width: 100%;
-  font-size: 12px;
-  margin: 10px 0;
-  filter: drop-shadow(0px 0px 3px rgb(255, 255, 255,0.5));
+h2{
+  margin-bottom: 10px;
 }
 
-@media(max-width: 800px){
-  .cadastro{
-    width: 50vw;
+h3{
+  margin: 25px 0 10px;
+}
+
+p{
+  font-weight: 700;
+  opacity: 0.5;
+  margin-top: 10px;
+}
+
+@media(max-width: 900px){
+  h1{
+    font-size: 39px;
   }
-  }
+}
