--- a/css/tabela.css
+++ b/css/tabela.css
@@ -1,56 +1,91 @@
-.alunos{
-    width: max-content;
-    margin: 80px 300px;
-    color: white;
+.alunos {
+  width: max-content;
+  margin: 20px auto;
+  color: white;
 }
 
-table{
+table {
+  width: 100%;
+}
+
+tbody,
+thead,
+tfoot {
     width: 100%;
 }
 
-tr{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 7vw 7vw 7vw;
-    gap: 0;
-    background-color: rgb(150, 150, 150,0.3);
-    border-radius: 10px;
-    justify-content: space-between;
-    margin-bottom: 5px;
+tr {
+  width: 60%;
+  display: grid;
+  grid-template-columns: 7vw 7vw 7vw;
+  gap: 0;
+  background-color: rgb(150, 150, 150, 0.3);
+  border-radius: 10px;
+  justify-content: space-between;
+  margin: 3px auto;
 }
 
-th{
-    color: rgb(255, 255, 255,0.75);
+th {
+  color: rgb(255, 255, 255, 0.75);
+  padding: 10px;
+  text-align: center;
+  width: max-content;
+  height: max-content;
+  flex: auto;
+
+}
+
+#tblAlunos tr {
+  width: 100%;
+  grid-template-columns: auto auto auto auto auto auto auto;
+  justify-content: space-around;
+  padding: 5px;
+}
+#tblAlunos tfoot tr {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#tblAbaixoMedia tr {
+  width: 100%;
+  grid-template-columns: 30% 30% 30%;
+  margin: 5px auto;
+  justify-content: center;
+}
+
+.Aprovado {
+  background-color: rgba(130, 255, 165, 0.3);
+}
+.Recuperação {
+  background-color: rgba(243, 255, 111, 0.3);
+}
+.Reprovado {
+  background-color: rgba(255, 111, 111, 0.3);
+}
+.abaixoMedia {
+  background-color: rgba(0, 255, 255, 0.2);
+}
+
+@media (max-width: 800px) {
+  .alunos {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  tr {
+    align-items: center;
     padding: 10px 15px;
-    text-align: center;
-}
+  }
 
-#tblAlunos tr{
-    grid-template-columns: 9vw 9vw 9vw 9vw 9vw 9vw 9vw;
-}#tblAlunos tfoot tr{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
+  th {
+    width: max-content;
+    font-size: 10px;
+    padding: 5px 2px;
+  }
 
-#tblAbaixoMedia tr{
-    grid-template-columns: 30% 30% 30%;
-}
-
-#tblAlunos tfoot th{
-    width: 9vw;
-    padding: 10px 2px;
-    text-align: center;
-}
-
-
-
-.Aprovado{
-    background-color: rgba(130, 255, 165,0.3);
-}
-.Recuperação{
-    background-color: rgba(243, 255, 111,0.3);
-}
-.Reprovado{
-    background-color: rgba(255, 111, 111,0.3);
+  #tblAbaixoMedia tr{
+    padding: 5px 3px;
+  }
 }
